Player 정보 관리에 PlayerPrefs 사용 및 초기값 지정 방식 변경

--- a/Pack/Undead Survivor_Data/boot.config
+++ b/Pack/Undead Survivor_Data/boot.config
@@ -1,11 +1,11 @@
 player-connection-mode=Listen
-player-connection-guid=3048745567
+player-connection-guid=2774851881
 player-connection-debug=0
 player-connection-project-name=Undead Survivor
-player-connection-ip=192.168.0.77
+player-connection-ip=10.26.214.207
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=d54e7fd5641840b8a61c60ff5355352d
+build-guid=e20d1a6fcb4f4df7a3f35f589f800908
