BFG 적용 및 재 커밋
Former-commit-id: 1aee12cd119f89763002c731e5471dcdbcdd0e14

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ crashlytics-build.properties
 /Assets/Editor Default Resources
 /Assets/ExternalDependencyManager
 /Assets/Firebase
+/bfg-1.14.0.jar
