게임 강제 종료 문제시 DB정보 업데이트 문제로인해 중복 로그인 방지 방식 PhotonNetwork 이용으로 변경

--- a/Pack/Undead Survivor_Data/boot.config
+++ b/Pack/Undead Survivor_Data/boot.config
@@ -1,11 +1,11 @@
 player-connection-mode=Listen
-player-connection-guid=1543616652
+player-connection-guid=917186489
 player-connection-debug=0
 player-connection-project-name=Undead Survivor
-player-connection-ip=192.168.200.150
+player-connection-ip=10.26.214.207
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=44a6c65bcf224513947aea7d55662df0
+build-guid=8ae750120e334e1fb0dcc4f222c5e7c4
